--- a/biotypes/Cargo.toml
+++ b/biotypes/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "patentseq"
+name = "biotypes"
 version = "0.1.0"
 authors = ["Erin Moon <erin@hecke.rs>"]
 edition = "2018"
@@ -7,6 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[workspace]
-members = ["biotypes"]
