--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Erin Moon <erin@hecke.rs>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+biotypes = {path = "./biotypes"}
+chrono = "0.4.11"
 
 [workspace]
 members = ["biotypes"]
